--- a/templates/backend/users/register.html
+++ b/templates/backend/users/register.html
@@ -3,7 +3,12 @@
 {% block title %} Registration {% endblock %}
 
 {% block content %}
-    {{ form.as_p }}
-    
-    <a href="{}">
+    {% for field in form %}
+        <div class="col-md-6 col-md-offset-3">
+                <div class="form-row">
+                    {{ field.errors }}
+                    {{ field }}
+                </div>
+        </div>
+    {% endfor %}
 {% endblock %}
