added course, student and teacher dashboard

--- a/templates/backend/base_files/base_dashboard.html
+++ b/templates/backend/base_files/base_dashboard.html
@@ -69,9 +69,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
+          {% block top_nav_item %} {% endblock %}
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -82,10 +80,10 @@
   </div>
 </nav>
 
-<div class="container-fluid">
-  <div class="row my-2" style="margin: auto; padding: 0">
-    <div class="col-md-2 sidebar overflow-hidden rounded-2 mx-lg-2">
-      <ul class="nav navbar-dark bg-dark sidenav flex-column gap-2 px-3 py-2 h-100">
+<div class="container-fluid overflow-hidden">
+  <div class="row g-2" style="margin: auto; padding: 0">
+    <div class="col-md-2 p-2 sidebar bg-dark overflow-hidden rounded-2">
+      <ul class="nav navbar-dark sidenav flex-column gap-3 px-3 py-2 h-100">
         <li style="height: 3em">
             <h3>
                 Menu
@@ -108,7 +106,6 @@
 
     <div class="col-md-9 bg-white rounded-2" style="padding: 1em;"> 
         {% block content %}
-            <h1 style="font-size: 32px;">Welcome to the Dashboard</h1> 
         {% endblock %}
     </div>
   
