--- a/templates/backend/courses/course_list.html
+++ b/templates/backend/courses/course_list.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'backend/base_files/base_dashboard.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="container p-1">
+        <div class="row">
+            {% for course in courses %}
+                <div class="col-md-4 col-lg-4">
+                    <div class="card">
+                        <div class="card-header">
+                            {{ course.name }} 
+                        </div>
+                        <div class="card-body">
+                            <p>{{ course.description }}</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="{% url 'course_details' 'instructor' course.id %}" class="btn btn-primary">View</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
