--- a/templates/backend/utility_pages/status_message.py.html
+++ b/templates/backend/utility_pages/status_message.py.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Title</title>
 </head>
 <body>
-    
+
 </body>
 </html>
