--- a/templates/backend/base_files/base_dashboard.html
+++ b/templates/backend/base_files/base_dashboard.html
@@ -11,7 +11,7 @@
     <style>
                 /* Set body to full viewport height */
         body, html {
-            height: 100%;
+            height: 100vh;
             width: 100%;
             margin: 0;
             background-color: #e0e0e0;
@@ -80,11 +80,11 @@
   </div>
 </nav>
 
-<div class="container-fluid overflow-hidden">
-  <div class="row g-2" style="margin: auto; padding: 0">
-    <div class="col-md-2 p-2 sidebar bg-dark overflow-hidden rounded-2">
+<div class="container-fluid overflow-hidden px-2">
+  <div class="row p-2 gap-2" style="height: 91vh">
+    <div class="col-md-2 sidebar bg-dark overflow-hidden p-1 rounded-2">
       <ul class="nav navbar-dark sidenav flex-column gap-3 px-3 py-2 h-100">
-        <li style="height: 3em">
+        <li style="height: 2.5em">
             <h3>
                 Menu
             </h3>
@@ -104,7 +104,7 @@
       </ul>
     </div>
 
-    <div class="col-md-9 bg-white rounded-2" style="padding: 1em;"> 
+    <div class="col-md-10 bg-white rounded-2" style="padding: 1.5em .5em; width: 82vw"> 
         {% block content %}
         {% endblock %}
     </div>
