--- a/templates/backend/users/student_view.html
+++ b/templates/backend/users/student_view.html
@@ -28,7 +28,7 @@
 
 {% block content %}
 
-    <div class="container p-1">
+    <div class="container">
         <div class="row">
             {% for course in courses %}
                 <div class="col-md-4 col-lg-4">
