login, registration added

--- a/templates/backend/base_files/base_dashboard.html
+++ b/templates/backend/base_files/base_dashboard.html
@@ -105,8 +105,9 @@
     </div>
 
     <div class="col-md-10 bg-white rounded-2" style="padding: 1.5em .5em; width: 82vw"> 
-        {% block content %}
-        {% endblock %}
+        <div class="container-fluid px-3">
+            {% block content %} {% endblock %}
+        </div>
     </div>
   
   </div>
