--- a/templates/backend/users/login.html
+++ b/templates/backend/users/login.html
@@ -12,10 +12,10 @@
     {% csrf_token %}
     
     <div class="col-12">
-        <input type="email" id="email" placeholder="Enter your email" class="form-control" aria-description="Email">
+        <input type="email" name="email" id="email" placeholder="Enter your email" class="form-control" aria-description="Email">
     </div>
     <div class="col-12">
-        <input type="password" id="password" placeholder="Enter your password" class="form-control" aria-description="Password">
+        <input type="password" name="password" id="password" placeholder="Enter your password" class="form-control" aria-description="Password">
     </div>
         
     <div class="col-12 text-start">
