--- a/templates/backend/users/instructor_view.html
+++ b/templates/backend/users/instructor_view.html
@@ -3,34 +3,34 @@
 {% block top_nav_item %}
     <li class="nav-item">
         <a class="nav-link" href="#">
-            Enroll Course
+            Add Course
         </a>
     </li>
-    
+
     <li class="nav-item">
         <a class="nav-link" href="#">
             Chat
         </a>
     </li>
-    
+
     <li class="nav-item">
         <a class="nav-link" href="#">
             Calendar
         </a>
     </li>
-    
+
     <li>
         <button class="btn">
             Attendance
         </button>
     </li>
-    
+
     <li class="nav-item">
         <button class="btn">
             Assignment
         </button>
     </li>
-    
+
     <li class="nav-item">
         <button class="btn">
             Assignment
@@ -43,17 +43,17 @@
         <div class="col-md-3">
             <div class="card">
                 <div class="card-header">
-                    <h3>User Info</h3>
+                    <h5>User Info</h5>
                 </div>
                 <div class="card-body">
                     <p><strong>Name:</strong> {{ user.first_name }} {{ user.last_name }}</p>
                     <p><strong>Email:</strong> {{ user.email }}</p>
                     <p><strong>Role:</strong> {{ user.role }}</p>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
-    
+    <hr>
     <div class="row">
         {% for course in courses %}
             <div class="col-md-3 col-lg-3">
