--- a/templates/backend/assessments/view_assessment.html
+++ b/templates/backend/assessments/view_assessment.html
@@ -1,21 +1,14 @@
-{% extends 'backend/base_files/base_course.html' %}
-{% load static %}
+{% extends 'base_assessment_dashboard.html' %}
 
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/view_assessment_style.css' %}">
-{% endblock %}
+{% block title %}View Assessment{% endblock %}
 
 {% block content %}
-  <h2>{{ assessment.title }}</h2>
-  <p>{{ assessment.description }}</p>
-  <p>Deadline: {{ assessment.deadline }}</p>
-  <p>Course: {{ assessment.course.name }}</p>
-  <p>Questions: <a id="download-link" href="{{ assessment.questions.url }}">Download</a></p>
-  {% if user.role == 'student' %}
-    <a href="{% url 'submit_assessment' assessment.id %}">Submit Assessment</a>
-  {% endif %}
-{% endblock %}
-
-{% block javascript %}
-<script src="{% static 'js/view_assessment_script.js' %}"></script>
+    <h2>{{ title }}</h2>
+    <p>{{ description }}</p>
+    <h3>Assessments</h3>
+    <ul>
+        {% for assessment in assessments %}
+            <li><a href="{% url 'view_assessment' assignment_id=assessment.id %}">{{ assessment.title }}</a></li>
+        {% endfor %}
+    </ul>
 {% endblock %}
