--- a/templates/backend/assessments/create_assessment.html
+++ b/templates/backend/assessments/create_assessment.html
@@ -1,19 +1,12 @@
-{% extends 'backend/base_files/base_course.html' %}
-{% load static %}
+{% extends 'base_assessment_dashboard.html' %}
 
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/create_assessment_style.css' %}">
-{% endblock %}
+{% block title %}Create Assessment{% endblock %}
 
 {% block content %}
-  <h2>Create Assessment</h2>
-  <form id="create-assessment-form" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
-  </form>
-{% endblock %}
-
-{% block javascript %}
-<script src="{% static 'js/create_assessment_script.js' %}"></script>
+    <h2>Create Assessment</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Create</button>
+    </form>
 {% endblock %}
