merger with sib branch

--- a/templates/backend/assessments/create_assessment.html
+++ b/templates/backend/assessments/create_assessment.html
@@ -1,4 +1,4 @@
-{% extends 'base_assessment_dashboard.html' %}
+{% extends 'backend/base_dashboard.html' %}
 
 {% block title %}Create Assessment{% endblock %}
 
